--- a/ConferenceApp/ConferenceApp/default.html
+++ b/ConferenceApp/ConferenceApp/default.html
@@ -3,18 +3,40 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
-    <title>ConferenceApp</title>
+    <title>App1</title>
 
     <!-- WinJS-Verweise -->
     <link href="WinJS/css/ui-dark.css" rel="stylesheet" />
     <script src="WinJS/js/base.js"></script>
     <script src="WinJS/js/ui.js"></script>
 
-    <!-- ConferenceApp-Verweise -->
-    <link href="/css/default.css" rel="stylesheet" />
-    <script src="/js/default.js"></script>
+    <!-- App1-Verweise -->
+    <link href="css/default.css" rel="stylesheet" />
+    <script src="js/default.js"></script>
 </head>
 <body class="win-type-body">
-    <p>Hier Inhalt einfügen</p>
+ 
+    <div id="app">
+        <div class="splitView" data-win-control="WinJS.UI.SplitView">
+            <!-- Pane area -->
+            <div>
+                <div class="header">
+                    <button class="win-splitviewpanetoggle"
+                            data-win-control="WinJS.UI.SplitViewPaneToggle"
+                            data-win-options="{ splitView: select('.splitView') }"></button>
+                    <div class="title">SplitView Pane area</div>
+                </div>
+
+                <div class="nav-commands">
+                    <div data-win-control="WinJS.UI.NavBarCommand" data-win-options="{ label: 'Home', icon: 'home'}"></div>
+                    <div data-win-control="WinJS.UI.NavBarCommand" data-win-options="{ label: 'Favorite', icon: 'favorite'}"></div>
+                    <div data-win-control="WinJS.UI.NavBarCommand" data-win-options="{ label: 'Settings', icon: 'settings'}"></div>
+                </div>
+            </div>
+
+            <!-- Content area -->
+            <div class="contenttext"><h2 class="win-h2">SplitView Content area</h2> </div>
+        </div>
+    </div>
 </body>
 </html>
