--- a/ConferenceApp/ConferenceApp/default.html
+++ b/ConferenceApp/ConferenceApp/default.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
-    <title>App1</title>
+    <title>ConferenceApp</title>
 
     <!-- WinJS-Verweise -->
     <link href="WinJS/css/ui-dark.css" rel="stylesheet" />
@@ -24,7 +24,7 @@
                     <button class="win-splitviewpanetoggle"
                             data-win-control="WinJS.UI.SplitViewPaneToggle"
                             data-win-options="{ splitView: select('.splitView') }"></button>
-                    <div class="title">SplitView Pane area</div>
+                    <div class="title">Menü</div>
                 </div>
 
                 <div class="nav-commands">
