--- a/app/start.html
+++ b/app/start.html
@@ -3,13 +3,17 @@
 <head>
 	<title>Page Title</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 	<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" href="css/default.css" />
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/default.js"></script>
+
+    <script src="js/datenmodell.js"></script>
+    <script src="js/stub.js"></script>
 </head>
 <body>
 
@@ -55,7 +59,7 @@
 
     <div role="main" class="ui-content">
 
-        <ul id="personListView" data-role="listview" >
+        <ul id="personListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true">
         </ul>
 
         <script type="text/javascript" src="js/personList.js"></script>
