--- a/app/speaker.html
+++ b/app/speaker.html
@@ -16,46 +16,48 @@
 </head>
 <body>
 
-
+    <!-- Name des Speakers -->
     <div class="ui-corner-all custom-corners">
         <div class="ui-bar ui-bar-a">
-            <h3 id="name"></h3>
+            <h1 id="name"></h1>
             <script>
                 document.getElementById("name").innerHTML = speaker1.name;
             </script>
         </div>
 
-        <div src="" class="ui-body ui-body-a">
+        <!-- Foto - mittig -->
+        <div class="ui-body ui-body-a" id="">
+            <div style="text-align:center;">
+                <img alt="Foto" height="200" width="200" id="personPhoto">
+                <script>
+                    $("#personPhoto").attr("src", speaker1.photo);
+                </script>
+            </div>
 
-            <img src="" alt="Foto" height="200" width="200">
-            <script>
-                document.getElementById("link").setAttribute("src", speaker1.photo);
-            </script>
-
-
-
-            <div class="ui-body ui-body-a ui-corner-all">
+            <!--  Position -->
+            <div class="ui-bar ui-bar-a">
                 <p>
                     Position:
                     <span id="position"></span>
                 </p>
-                <p>
+            </div>
+
+            <!--  Organisation mit url -->
+            <div class="ui-bar ui-bar-a">
+                <p id="orga">
                     Organisation:
-                    <span id="orga"></span>
-                </p>
-                <p id="orga_url">
-                    <a id="link"></a>
+                    <a id="linktext" target="_blank"></a>
                 </p>
                 <script>
-                    document.getElementById("position").innerHTML = speaker1.position;
-                    document.getElementById("orga").innerHTML = speaker1.organization;
-                    document.getElementById("orga_url").innerHTML = speaker1.organizationUrl;
-                    document.getElementById("link").setAttribute("href", speaker1.organizationUrl);
+                    $("#position").text(speaker1.position);
+                    $("#linktext").text(speaker1.organization);
+                    $("#orga a").attr("href", speaker1.position); document.getElementById("link").setAttribute("href",
+speaker1.organizationUrl);
                 </script>
             </div>
 
-
-            <div class="ui-body-b">
+            <!-- Biografie -->
+            <div class="ui-body ui-body-b">
                 <h4>Biografie</h4>
                 <p id="bio"></p>
                 <script>document.getElementById("bio").innerHTML = speaker1.biography;</script>
@@ -63,6 +65,13 @@
         </div>
     </div>
 
+    <!-- Sessions -->
+
+
+    <!-- Twitter-->
+    <div>
+
+    </div>
 
 </body>
 </html>
