listView Scrollable mit Daten aus Loader.

--- a/app/speaker.html
+++ b/app/speaker.html
@@ -3,7 +3,7 @@
 <head>
     <title>Speaker</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0 ,user-scalable=no">
 
     <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
     <link rel="stylesheet" href="css/default.css" />
