--- a/app/start.html
+++ b/app/start.html
@@ -14,6 +14,7 @@
 
     <script src="js/datenmodell.js"></script>
     <script src="js/stub.js"></script>
+    <script src="js/loader.js"></script>
 </head>
 <body>
 
@@ -61,8 +62,8 @@
 
         <ul id="personListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true">
         </ul>
-
         <script type="text/javascript" src="js/personList.js"></script>
+
     </div><!-- /content -->
 
     <div data-role="footer">
