--- a/app/twitter.html
+++ b/app/twitter.html
@@ -31,7 +31,7 @@ function tryCreateTimeline() {
       width: '450',
       height: '700',
       related: 'twitterdev,twitterapi',
-      screenName: 'Tatjana'
+      screenName: 'SpartaTeam'
     }).then(function (el) {
       console.log("Embedded a timeline.")
     });
