--- a/app/start.html
+++ b/app/start.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>Page Title</title>
@@ -15,7 +15,7 @@
     <script src="js/datenmodell.js"></script>
     <script src="js/stub.js"></script>
 </head>
-<body>
+<body id="listBegin">
 
 <div data-role="page" id="foo">
 
