--- a/app/start.html
+++ b/app/start.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/default.css" />
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
+	<script src="js/js.cookie.js"></script>
     <script src="js/default.js"></script>
 
     <script src="js/datenmodell.js"></script>
