Favoriten weiterentwickelt. Speaker page hinzugefügt.

--- a/app/speaker.html
+++ b/app/speaker.html
@@ -12,6 +12,7 @@
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/jquery.mobile-1.4.5.min.js"></script>
   <script src="js/twitter.widgets.js"></script>
+    <script src="js/moment.js"></script>
   <script src="js/default.js"></script>
   <script src="js/datenmodell.js"></script>
   <script src="js/stub.js"></script>
@@ -41,6 +42,7 @@
 
 <body>
 
+<div data-role="page" id="speakers">
   <!-- Name des Speakers -->
   <div class="ui-corner-all custom-corners">
     <div class="ui-bar ui-bar-a">
@@ -125,6 +127,7 @@
       <div id='twitterWidget'>
       </div>
     </div>
+
 </body>
 
 </html>
