--- a/app/start.html
+++ b/app/start.html
@@ -26,9 +26,12 @@
         <h1>Sessions</h1>
     </div><!-- /header -->
 
-    <div class="ui-content-b">
+    <div class="ui-content-b sessions">
 
         <ul id="sessionListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>
+
+        <div id="result"></div>
+
 
         <script type="text/javascript" src="js/sessionList.js"></script>
 
