genSpeaker ausgeführt. Vortragende Problem behoben

--- a/app/session.html
+++ b/app/session.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 
+<div data-role="page" id="sessionDetail">
     <!-- Name der Session (Format/Typ)-->
     <div class="ui-corner-all custom-corners">
         <div class="ui-bar ui-bar-a">
@@ -110,5 +111,6 @@
 
 
     </div>
+</div>
 </body>
 </html>
