--- a/app/speaker.html
+++ b/app/speaker.html
@@ -94,7 +94,7 @@
       </div>
 
 
-
+     <div class="ui-corner-all custom-corners distance">
       <!-- Links -->
       <!-- Start of the listView page -->
       <div class="ui-bar ui-bar-c">
@@ -109,7 +109,7 @@
         <script type="text/javascript" src="js/linkList.js"></script>
         <script type="text/javascript">attachLinkList(false);</script>
       </div>
-
+     </div>
       <!-- Sessions -->
       <!-- Start of the listView page -->
 
