--- a/app/session.html
+++ b/app/session.html
@@ -76,7 +76,7 @@
                 </script>
             </div>
         </div>
-        <div class="ui-corner-all custom-corners distance">
+        <div class="ui-corner-all custom-corners">
             <!-- Links -->
             <!-- Start of the listView page -->
             <div class="ui-bar ui-bar-a">
