--- a/app/session.html
+++ b/app/session.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+    <link href="css/font-awesome.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/default.css" />
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/default.js"></script>
+    <script src="js/moment.js"></script>
     <script src="js/datenmodell.js"></script>
     <script src="js/stub.js"></script>
-
 </head>
 <body>
 
 <div data-role="page" id="sessionDetail">
     <!-- Name der Session (Format/Typ)-->
     <div class="ui-corner-all custom-corners">
-        <div class="ui-bar ui-bar-a">
+        <div class="ui-bar ui-bar-b">
             <h1><span id="name"></span> (<span id="format"></span>)</h1>
             <script type="text/javascript">
                 $("#name").text(session3.getTitle());
@@ -28,10 +29,12 @@
         </div>
         <!-- Track-Name, falls vorhanden -->
         <div class="ui-bar ui-bar-a">
-            <h2 id="track"></h2>
+            <h2><span id="track"></span> <span id="icon"></span></h2>
             <script type="text/javascript">
                 if (session3.getTrackObj().getId() != null) {
-                    $("#track").text(session3.getTrackObj().getLabelDe())
+                    $("#track").text(session3.getTrackObj().getLabelDe());
+                    $("#icon").addClass('fa fa-cube');
+                    $("#icon").css('color', session3.getTrackObj().getColor());
                 }
             </script>
         </div>
@@ -40,27 +43,31 @@
 
             <!-- Beginn / Ende -->
             <div class="ui-bar ui-bar-a">
-                <p>
-                    Von
-                    <span id="begin"></span>
-                    bis
-                    <span id="end"></span>
-                </p>
+                <p id="vonbis"></p>
                 <!-- Dauer -->
                 <p>Dauer: <span id="dauer"></span>h</p>
                 <p>Ort: <span id="location"></span></p>
                 <p>Sprache: <span id="lang"></span></p>
+                <p>Level: <span id="level"></span></p>
             </div>
             <script type="text/javascript">
-                $("#begin").text(session3.getBegin());
-                $("#end").text(session3.getEnd());
+                // Erstellen eines Strings mit der Uhrzeit
+                var begin = session3.getBegin();
+                var end = session3.getEnd();
+                begin = moment(begin).format("HH:mm");
+                end = moment(end).format("HH:mm");
+                var vonBis = begin + ' - ' + end;
+
+                // Text einfüllen
+                $("#vonbis").text(vonBis);
                 $("#dauer").text(session3.getDuration() / 60 / 60);
                 $("#location").text(session3.getLocationObj().getLabelDe());
                 $("#lang").text(session3.getLanguageObj().getLabelDe());
+                $("#level").text(session3.getLevelObj().getLabelDe());
             </script>
 
             <!-- Abstract -->
-            <div class="ui-bar ui-bar-b">
+            <div class="ui-bar ui-bar-a">
                 <h4>Abstract</h4>
                 <p id="abs"></p>
                 <script type="text/javascript">
@@ -80,7 +87,7 @@
         <div class="ui-corner-all custom-corners">
             <!-- Links -->
             <!-- Start of the listView page -->
-            <div class="ui-bar ui-bar-a">
+            <div class="ui-bar ui-bar-b">
                 <h3>Links</h3>
             </div><!-- /header -->
 
@@ -95,7 +102,7 @@
     </div>
     <div class="ui-corner-all custom-corners distance" id="listBegin">
         <!-- Speaker -->
-        <div class="ui-bar ui-bar-a">
+        <div class="ui-bar ui-bar-b">
             <h1 id="name">Vortragende</h1>
         </div>
 
