--- a/app/speaker.html
+++ b/app/speaker.html
@@ -51,7 +51,7 @@
     <div data-role="page" id="speakers">
         <!-- Name des Speakers -->
         <div class="ui-corner-all custom-corners">
-            <div class="ui-bar ui-bar-a">
+            <div class="ui-bar ui-bar-b">
                 <h1 id="name"></h1>
                 <script type="text/javascript">
                     document.getElementById("name").innerHTML = speaker1.name;
@@ -90,7 +90,7 @@
                 </div>
 
                 <!-- Biografie -->
-                <div class="ui-body ui-body-b">
+                <div class="ui-body ui-body-a">
                     <h4>Biografie</h4>
                     <p id="bio"></p>
                     <script type="text/javascript">
@@ -106,7 +106,7 @@
         <div class="ui-corner-all custom-corners distance">
             <!-- Links -->
             <!-- Start of the listView page -->
-            <div class="ui-bar ui-bar-a">
+            <div class="ui-bar ui-bar-b">
                 <h3>Links</h3>
             </div>
             <!-- /header -->
@@ -123,7 +123,7 @@
       <!-- Sessions -->
       <!-- Start of the listView page -->
 
-            <div class="ui-bar ui-bar-a">
+            <div class="ui-bar ui-bar-b">
                 <h3>Sessions</h3>
             </div>
             <!-- /header -->
