--- a/final/index.html
+++ b/final/index.html
@@ -24,6 +24,7 @@
 
 	<!-- stylesheet -->
 	<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+	<link rel="stylesheet" href="css/default.css" />
 	
 	
 	<!-- Js -->
