--- a/final/index.html
+++ b/final/index.html
@@ -69,6 +69,15 @@
 		</div>
 	</div>
 	
+	<div data-role="page" id="sessionDetailPage">
+		<div data-role="header">
+			<h1>Session</h1>
+			<a href="#sessionDetailPM" data-rel="popup" data-transition="slideup" data-icon="gear" class="ui-btn-right">Menü</a>
+		</div>
+		<div role="main" class="ui-content">		
+		</div>
+	</div>
+	
 	<div data-role="page" id="speakerListPage">
 		<div data-role="header">
 			<h1>Speakerübersicht</h1>
@@ -76,6 +85,15 @@
 		</div>
 		<div role="main" class="ui-content">
 			 <ul id="speakerListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>		
+		</div>
+	</div>
+	
+	<div data-role="page" id="speakerDetailPage">
+		<div data-role="header">
+			<h1>Speaker</h1>
+			<a href="#speakerDetailPM" data-rel="popup" data-transition="slideup" data-icon="gear" class="ui-btn-right">Menü</a>
+		</div>
+		<div role="main" class="ui-content">		
 		</div>
 	</div>
 
