--- a/final/index.html
+++ b/final/index.html
@@ -53,7 +53,7 @@
 	<div data-role="page" id="sessionListPage">
 		<div data-role="header">
 			<h1>Session</h1>
-			     <a href="#sessionListPM" data-rel="popup" data-transition="slideup" data-icon="gear" class="ui-btn-right">Menü</a>
+			     <a href="#sessionListPM" data-icon="bars" class="ui-btn-left">Menü</a>
 			<div data-role="navbar">
 				<ul id="SessionListBar">
 				</ul>
@@ -71,8 +71,7 @@
 	
 	<div data-role="page" id="sessionDetailPage">
 		<div data-role="header">
-			<h1>Session</h1>
-			<a href="#sessionDetailPM" data-rel="popup" data-transition="slideup" data-icon="gear" class="ui-btn-right">Menü</a>
+			<h data-icon="bars" class="ui-btn-left">Menü</a>ata-icon="gear" class="ui-btn-right">Menü</a>
 		</div>
 		<div role="main" class="ui-content">		
 		</div>
@@ -81,7 +80,7 @@
 	<div data-role="page" id="speakerListPage">
 		<div data-role="header">
 			<h1>Speakerübersicht</h1>
-			<a href="#speakerListPM" data-rel="popup" data-transition="slideup" data-icon="gear" class="ui-btn-right">Menü</a>
+			<a href="#speakerListPM" data-icon="bars" class="ui-btn-left">Menü</a>
 		</div>
 		<div role="main" class="ui-content">
 			 <ul id="speakerListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>		
@@ -91,7 +90,7 @@
 	<div data-role="page" id="speakerDetailPage">
 		<div data-role="header">
 			<h1>Speaker</h1>
-			<a href="#speakerDetailPM" data-rel="popup" data-transition="slideup" data-icon="gear" class="ui-btn-right">Menü</a>
+			<a href="#speakerDetailPM" data-icon="bars" class="ui-btn-left">Menü</a>
 		</div>
 		<div role="main" class="ui-content">		
 		</div>
@@ -101,7 +100,7 @@
 	<div data-role="page" id="dashboardPage">
 		<div data-role="header">
 			<h1>Dashboard</h1>
-			<a href="#dashboardPM" data-rel="popup" data-transition="slideup" data-icon="gear" class="ui-btn-right">Menü</a>
+			<a href="#dashboardPM" data-icon="bars" class="ui-btn-left">Menü</a>
 		</div>
 
 
