--- a/final/index.html
+++ b/final/index.html
@@ -40,14 +40,14 @@
 </head>
 <body id="context">
 
-<!-- Start of first page -->
+
 <div data-role="page" id="loadingPage">
 
 	<div role="main" class="ui-content">
 		<img alt="loading" src="images/load.jpg" style="width: 100%; height: 100%">
 	</div><!-- /content -->
 
-</div><!-- /page -->
+</div>
 
 
 	<div data-role="page" id="sessionListPage">
@@ -68,15 +68,18 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div data-role="page" id="sessionDetailPage">
 		<div data-role="header">
-			<h data-icon="bars" class="ui-btn-left">Menü</a>ata-icon="gear" class="ui-btn-right">Menü</a>
+			<div data-role="header">
+				<h1>Session</h1>
+				<a href="#sessionDetailPM" data-rel="popup"
+					data-transition="slideup" data-icon="gear" class="ui-btn-right">Menü</a>
+			</div>
 		</div>
-		<div role="main" class="ui-content">		
-		</div>
+		<div role="main" class="ui-content"></div>
 	</div>
-	
+
 	<div data-role="page" id="speakerListPage">
 		<div data-role="header">
 			<h1>Speakerübersicht</h1>
@@ -86,13 +89,43 @@
 			 <ul id="speakerListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>		
 		</div>
 	</div>
-	
+
 	<div data-role="page" id="speakerDetailPage">
 		<div data-role="header">
 			<h1>Speaker</h1>
 			<a href="#speakerDetailPM" data-icon="bars" class="ui-btn-left">Menü</a>
 		</div>
-		<div role="main" class="ui-content">		
+		<div role="main" class="ui-content">
+			<div class="ui-grid-a ui-responsive">
+				<div class="ui-block-a">
+				 <div style="text-align:center">
+                    <img alt="Foto" height="200" width="200" id="speakerDetailFoto">
+                </div>
+				</div>
+				<div class="ui-block-b">
+					<h1 id="speakerDetailName"></h1>
+					<p id="speakerDetailPosition"></p>
+					<a id="speakerDetailOrganisation"></a>
+				</div>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Biografie</h4>
+				<p id="speakerDetailBiografie"></p>
+
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Links</h4>
+				 <ul id="speakerDetailLinkListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Sessions</h4>
+				 <ul id="speakerDetailSessionListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>
+			</div>
+
+
 		</div>
 	</div>
 
