--- a/final/index.html
+++ b/final/index.html
@@ -52,7 +52,7 @@
 
 	<div data-role="page" id="sessionListPage">
 		<div data-role="header">
-			<h1>Session</h1>
+			<h1>Sessionplan</h1>
 			     <a href="#sessionListPM" data-icon="bars" class="ui-btn-left">Menü</a>
 			<div data-role="navbar">
 				<ul id="SessionListBar">
@@ -60,12 +60,7 @@
 			</div>
 		</div>
 		<div role="main" class="ui-content">
-			<p>I'm the second in the source order so I'm hidden when the page
-				loads. I'm just shown if a link that references my id is beeing
-				clicked.</p>
-			<p>
-				<a href="#foo">Back to foo</a>
-			</p>
+			 <ul id="sessionListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>
 		</div>
 	</div>
 
