--- a/app/Datenschutz.html
+++ b/app/Datenschutz.html
@@ -20,7 +20,7 @@
         <div class="ui-corner-all custom-corners">
             <div data-role="header">
                 <div class="ui-bar ui-bar-a">
-                    <h1>Datenschutzerklärung:</h1>
+                    <h1>Datenschutzerklärung</h1>
                 </div>
             </div><!-- /header -->
             <div class="ui-bar ui-bar-b">
