--- a/final/index.html
+++ b/final/index.html
@@ -34,6 +34,7 @@
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/moment.js"></script>
+    <script src="js/twitter.widgets.js"></script>
     
     <script src="js/datenmodell.js"></script>
     <script src="js/extend.js"></script>
@@ -182,7 +183,11 @@
 				<h4>Sessions</h4>
 				 <ul id="speakerDetailSessionListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>
 			</div>
-
+			<br />
+			<div class="ui-body ui-body-a" id="speakerDetailTwitterCon">
+				<h4>Twitter (Widget)</h4>
+				 <p id="speakerDetailTwitter" style="text-align:center;" />
+			</div>	
 
 		</div>
 	</div>
