Favoriten festlegen und in LocalStorage für sessions und personen fertiggestellt. Favorite refactored und in gemeinsame Funktionen verallgemeintert und in einer JS zusammengefasst.

--- a/app/start.html
+++ b/app/start.html
@@ -13,6 +13,7 @@
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/js.cookie.js"></script>
+    <script src="js/favorite.js"></script>
     <script src="js/default.js"></script>
 
     <script src="js/datenmodell.js"></script>
