--- a/final/index.html
+++ b/final/index.html
@@ -201,13 +201,246 @@
 
 
 		<div role="main" class="ui-content">
-			<p>I'm the second in the source order so I'm hidden when the page
-				loads. I'm just shown if a link that references my id is beeing
-				clicked.</p>
-			<p>
-				<a href="#sessionListPage" class="ui-btn">Sessionplan</a>
-				<a href="#speakerListPage" class="ui-btn">Speakerübersicht</a>
-			</p>
+			<div class="ui-content-b sessions">
+				<div class="ui-body ui-body-a">
+					<div class="ui-grid-b ui-responsive">
+						<div class="ui-block-a">
+							<!-- Session Liste-->
+							<a href="#sessionListPage" class="ui-btn" data-theme="c">
+									<span class="fa fa-calendar fa-3x"></span>
+									<br />
+									<br />
+									Sessions
+							</a>
+						</div>
+						<div class="ui-block-b">
+							<!-- Speaker Liste-->
+							<a href="#speakerListPage" class="ui-btn" data-theme="c">
+									<span class="fa fa-user fa-3x"></span>
+									<br />
+									<br />
+									Sprecher
+							</a>
+						</div>
+						<div class="ui-block-c">
+							<!-- Impressum-->
+							<a href="#impressumPage" class="ui-btn" data-theme="c">
+									<span class="fa fa-registered fa-3x"></span>
+									<br />
+									<br />
+									Impressum
+							</a>
+						</div>
+					</div>
+					<!-- /grid-b -->
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div data-role="page" id="impressumPage">
+		<div data-role="header">
+			<h1>Impressum</h1>
+			<a href="#impressumPM" data-icon="bars" class="ui-btn-left">Menü</a>
+		</div>
+
+
+		<div role="main" class="ui-content">
+			<div class="ui-body ui-body-a">
+				<h4>Angaben gemäß § 5 TMG:</h4>
+				<p>
+	                    Tatjana Berger<br />
+	                    Andre Ganser<br />
+	                    Alexander Gräsel<br />
+	                    Lukas Schaller<br />
+	                    <br />
+	                    <b>Entwickler Team Sparta</b><br />
+	                    Johannes Gutenberg-Universität Mainz<br />
+	                    Saarstraße 21<br />
+	                    55122 Mainz<br />
+	                </p>
+	                <h4>Kontakt:</h4>
+	                <table>
+	                    <tr>
+	                        <td>E-Mail:</td>
+	                    <tr><td>Berger.Tatjana@web.de</td></tr>
+	                    <tr>
+	                        <td>andre@4ndre.de</td>
+	                    </tr>
+	                    <tr>
+	                        <td>alexander@axxg.de</td>
+	                    </tr>
+	                    <tr>
+	                        <td>Lukas@Schaller-ulm.de</td>
+	                    </tr>
+	                </table>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Haftungsausschluss (Disclaimer)</h4>
+				<p><strong>Haftung für Inhalte</strong></p> <p>
+	                    Als Diensteanbieter sind wir gemäß § 7 Abs.1
+	                    TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach
+	                    §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte, verlinkte  oder
+	                    gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf
+	                    eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der
+	                    Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine
+	                    diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten
+	                    Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir
+	                    diese Inhalte umgehend entfernen.
+	                </p> <p><strong>Haftung für Links</strong></p> <p>
+	                    Unser
+	                    Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss
+	                    haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die
+	                    Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter und/oder Betreiber der Seiten
+	                    verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche
+	                    Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht
+	                    erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne
+	                    konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von
+	                    Rechtsverletzungen werden wir derartige Links umgehend entfernen.
+	                </p>
+	                <p><strong>Urheberrecht</strong></p> <p>
+	                    Die durch die Seitenbetreiber erstellten Inhalte
+	                    und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung,
+	                    Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes
+	                    bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und
+	                    Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
+	                    Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die
+	                    Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche
+	                    gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden,
+	                    bitten wir um einen entsprechenden Hinweis an eine der genannten Kontakt-Adressen. 
+	                    Bei Bekanntwerden von Rechtsverletzungen
+	                    werden wir derartige Inhalte umgehend entfernen.
+	                </p>
+			</div>
+		</div>
+	</div>
+	
+	<div data-role="page" id="datenschutzPage">
+		<div data-role="header">
+			<h1>Datenschutzerklärung</h1>
+			<a href="#datenschutzPM" data-icon="bars" class="ui-btn-left">Menü</a>
+		</div>
+
+
+		<div role="main" class="ui-content">
+			<div class="ui-body ui-body-a">
+				<h4>Datenschutz</h4>
+				 <p>
+                    Die Betreiber dieser Seiten nehmen den Schutz Ihrer
+                    persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich
+                    und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.
+                </p>
+                <p>
+                    Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich.
+                    Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder
+                    E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis.
+                    Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.
+                </p>
+                <p>
+                    Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation
+                    per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff
+                    durch Dritte ist nicht möglich.
+                </p>
+			</div>
+			<br />
+			
+			<div class="ui-body ui-body-a">
+				<h4>Datenschutzerklärung für die Nutzung von Twitter</h4>
+				<p>
+                    Auf unseren Seiten
+                    sind Funktionen des Dienstes Twitter eingebunden. Diese Funktionen werden angeboten durch die
+                    Twitter Inc., 1355 Market Street, Suite 900, San Francisco, CA 94103, USA. Durch das Benutzen
+                    von Twitter und der Funktion "Re-Tweet" werden die von Ihnen besuchten Webseiten mit Ihrem
+                    Twitter-Account verknüpft und anderen Nutzern bekannt gegeben. Dabei werden auch Daten an
+                    Twitter übertragen. Wir weisen darauf hin, dass wir als Anbieter der Seiten keine Kenntnis
+                    vom Inhalt der übermittelten Daten sowie deren Nutzung durch Twitter erhalten. Weitere
+                    Informationen hierzu finden Sie in der Datenschutzerklärung von Twitter unter
+                    <a href="http://twitter.com/privacy">http://twitter.com/privacy</a>.
+                </p> <p>
+                    Ihre
+                    Datenschutzeinstellungen bei Twitter können Sie in den Konto-Einstellungen unter
+                    <a href="http://twitter.com/account/settings">http://twitter.com/account/settings</a>
+                    ändern.
+                </p>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Datenschutzerklärung für die Nutzung von Xing</h4>
+				<p>
+                    Unsere
+                    Webseite nutzt Funktionen des Netzwerks XING. Anbieter ist die XING AG, Dammtorstraße 29-32,
+                    20354 Hamburg, Deutschland. Bei jedem Abruf einer unserer Seiten, die Funktionen von Xing
+                    enthält, wird eine Verbindung zu Servern von Xing hergestellt. Eine Speicherung von
+                    personenbezogenen Daten erfolgt dabei nach unserer Kenntnis nicht. Insbesondere werden
+                    keine IP-Adressen gespeichert oder das Nutzungsverhalten ausgewertet.
+                </p> <p>
+                    Weitere
+                    Information zum Datenschutz und dem Xing Share-Button finden Sie in der Datenschutzerklärung
+                    von Xing unter <a href="https://www.xing.com/app/share?op=data_protection">
+                        https://www.xing.com/app/share?op=data_protection
+                    </a>
+                </p>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Widerspruch Werbe-Mails</h4>
+				                <p>
+                    Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten zur
+                    Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien
+                    wird hiermit widersprochen. Die Betreiber der Seiten behalten sich ausdrücklich
+                    rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa
+                    durch Spam-E-Mails, vor.
+                </p>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Auskunft, Löschung, Sperrung</h4>
+				 <p>
+                    Sie haben jederzeit das Recht
+                    auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen Daten, deren
+                    Herkunft und Empfänger und den Zweck der Datenverarbeitung sowie ein Recht auf
+                    Berichtigung, Sperrung oder Löschung dieser Daten. Hierzu sowie zu weiteren Fragen
+                    zum Thema personenbezogene Daten können Sie sich jederzeit unter der im Impressum
+                    angegebenen Adresse an uns wenden.
+                </p>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Cookies</h4>
+				<p>
+                    Die Internetseiten verwenden teilweise so genannte
+                    Cookies. Cookies richten auf Ihrem Rechner keinen Schaden an und enthalten keine Viren.
+                    Cookies dienen dazu, unser Angebot nutzerfreundlicher, effektiver und sicherer zu machen.
+                    Cookies sind kleine Textdateien, die auf Ihrem Rechner abgelegt werden und die Ihr
+                    Browser speichert.
+                </p> <p>
+                    Die meisten der von uns verwendeten Cookies sind so genannte
+                    „Session-Cookies“. Sie werden nach Ende Ihres Besuchs automatisch gelöscht. Andere Cookies
+                    bleiben auf Ihrem Endgerät gespeichert, bis Sie diese löschen. Diese Cookies ermöglichen
+                    es uns, Ihren Browser beim nächsten Besuch wiederzuerkennen.
+                </p> <p>
+                    Sie können Ihren
+                    Browser so einstellen, dass Sie über das Setzen von Cookies informiert werden und Cookies
+                    nur im Einzelfall erlauben, die Annahme von Cookies für bestimmte Fälle oder generell
+                    ausschließen sowie das automatische Löschen der Cookies beim Schließen des Browser
+                    aktivieren. Bei der Deaktivierung von Cookies kann die Funktionalität dieser Website
+                    eingeschränkt sein.
+                </p>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Kontaktformular</h4>
+				 <p>
+                    Wenn Sie uns per Kontaktformular Anfragen
+                    zukommen lassen, werden Ihre Angaben aus dem Anfrageformular inklusive der von Ihnen
+                    dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von
+                    Anschlussfragen bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung
+                    weiter.
+                </p>
+			</div>
+			
+			
 		</div>
 	</div>
 	
