--- a/final/index.html
+++ b/final/index.html
@@ -224,11 +224,11 @@
 						</div>
 						<div class="ui-block-c">
 							<!-- Impressum-->
-							<a href="#impressumPage" class="ui-btn" data-theme="c">
-									<span class="fa fa-registered fa-3x"></span>
+							<a href="#newsPage" class="ui-btn" data-theme="c">
+									<span class="fa fa-rss-square fa-3x"></span>
 									<br />
 									<br />
-									Impressum
+									News
 							</a>
 						</div>
 						<div class="ui-block-a">
@@ -301,6 +301,94 @@
 			</div>
 			<div class="ui-grid-solo">
 				<a onclick="alert('Nachricht wurde versendet!')" class="ui-btn">Senden</a>
+			</div>
+		</div>
+	</div>
+
+	<div data-role="page" id="newsPage">
+		<div data-role="header">
+			<h1>News</h1>
+			<a href="#newsPM" data-icon="bars" class="ui-btn-left">Menü</a>
+		</div>
+
+
+		<div role="main" class="ui-content">
+			<div class="ui-body ui-body-a">
+				<h4>Das Ende nähert sich!</h4>
+				 <p>Nur noch wenige Stunden verbleiben bis zum Ende des Codings!</p>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4><span id="trophy" class="fa fa-trophy"></span> And the winner is...</h4>
+				 <div data-role="collapsible">
+                        <h3>Platz 1</h3>
+                        <p>
+                            still unknown!
+                        </p>
+                    </div>
+                    <div data-role="collapsible">
+                        <h3>Platz 2</h3>
+                        <p>
+                            still unknown!
+                        </p>
+                    </div>
+                    <div data-role="collapsible">
+                        <h3>Platz 3</h3>
+                        <p>
+                            still unknown!
+                        </p>
+                    </div>
+			</div>
+			<br />
+			<div class="ui-body ui-body-a">
+				<h4>Preise?!</h4>
+				                    <fieldset class="ui-grid-c ui-responsive">
+
+                        <div class="ui-block-a">
+                            <div class="ui-corner-all custom-corners">
+                                <div class="ui-bar ui-bar-a separate">
+                                    <h3>Platz 1</h3>
+                                </div>
+                                <div class="ui-body ui-body-a">
+                                    <p>
+                                        ─ Smartwatches für jedes Teammitglied<br />
+                                        ─ 1 Erklärvideo für die App, die Ihr entwickelt<br />
+                                        ─ more coming soon
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ui-block-b separate">
+                            <div class="ui-corner-all custom-corners ">
+                                <div class="ui-bar ui-bar-a">
+                                    <h3>Platz 2</h3>
+                                </div>
+                                <div class="ui-body ui-body-a">
+                                    <p>
+                                        ─ Euer Abbild aus dem 3D-Drucker: Eine „Copy of Me“
+                                        ─ Beratungspaket von intoCommerce<br />
+                                        ─ 8 Filme (4 Blu-Rays, 4 DVDs)<br />
+                                        ─ more coming soon
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="ui-block-c separate">
+                            <div class="ui-corner-all custom-corners">
+                                <div class="ui-bar ui-bar-a">
+                                    <h3>Platz 3</h3>
+                                </div>
+                                <div class="ui-body ui-body-a">
+                                    <p>
+                                        ─ 4x 10€ Cinestar-Gutscheine<br />
+                                        ─ more coming soon
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
 			</div>
 		</div>
 	</div>
@@ -510,8 +598,5 @@
 			
 		</div>
 	</div>
-	
-
-	
 </body>
 </html>
