Favoriten werden nach Anfangszeit gruppiert, wenn mehr als 2 Elemente zur selben Uhrzeit anfangen.

--- a/app/start.html
+++ b/app/start.html
@@ -31,31 +31,13 @@
 
     <div class="ui-content-b sessions">
 
-        <ul id="sessionListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true"></ul>
+        <ul id="sessionListView" data-role="listview" data-split-icon="gear" data-split-theme="b" data-inset="true" data-divider-theme="a"></ul>
 
         <div id="result"></div>
-
 
         <script type="text/javascript" src="js/sessionList.js"></script>
 
     </div>
-</div><!-- /page -->
-
-<!-- Start of second page -->
-<div data-role="page" id="bar">
-
-	<div data-role="header">
-		<h1>Bar</h1>
-	</div><!-- /header -->
-
-	<div role="main" class="ui-content">
-		<p>I'm the second in the source order so I'm hidden when the page loads. I'm just shown if a link that references my id is beeing clicked.</p>
-		<p><a href="#foo">Back to foo</a></p>
-	</div><!-- /content -->
-
-	<div data-role="footer">
-		<h4>Page Footer</h4>
-	</div><!-- /footer -->
 </div><!-- /page -->
 
 <!-- Start of the listView page -->
@@ -72,9 +54,9 @@
 
     </div><!-- /content -->
 
-    <div data-role="footer">
-        <h4><a href="#personFavoriten">Favoriten</a></h4>
-    </div><!-- /footer -->
+    <!--<div data-role="footer">-->
+        <!--<h4><a href="#personFavoriten">Favoriten</a></h4>-->
+    <!--</div>&lt;!&ndash; /footer &ndash;&gt;-->
 </div><!-- /page -->
 
 <!-- Start of the listView page -->
