Favorite Funktion in final korrigiert.

--- a/final/index.html
+++ b/final/index.html
@@ -35,8 +35,9 @@
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/moment.js"></script>
     <script src="js/twitter.widgets.js"></script>
-    
+
     <script src="js/datenmodell.js"></script>
+    <script src="js/favorite.js"></script>
     <script src="js/extend.js"></script>
     <script src="js/loader.js"></script>
     
