--- a/final/index.html
+++ b/final/index.html
@@ -397,6 +397,35 @@
                         </div>
                     </fieldset>
 			</div>
+
+
+
+            <br>
+            <div class="ui-body ui-body-a">
+                <h4>Flickr</h4>
+
+                <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+                <link rel="stylesheet" type="text/css" href="css/js-flickr-gallery.css" />
+                <style type="text/css">
+                    .span1 {width:auto;}
+                    .pagination {text-align: center;}
+                    .thumbnail {padding: auto; margin: auto;}
+                </style>
+                <script type="text/javascript" src="js/bootstrap.js"></script>
+                <script type="text/javascript" src="js/js-flickr-gallery.js"></script>
+
+                <div id="gallery" class="js-flickr-gallery"></div>
+                <script type="text/javascript">
+                    var options = {
+                        "url": {
+                            "user_id": "re-publica"
+                        }
+                    };
+                    $("#gallery").jsFlickrGallery(options);
+                </script>
+
+
+            </div>
 		</div>
 	</div>
 
